# nqueens_benchmark

./: CMakeLists.txt  README.md
include/: solver.hpp
include/solvers/: backtracking.hpp  brute_force.hpp  forward_checking.hpp
src/: main.cpp  solver.cpp
src/solvers/: backtracking.cpp  brute_force.cpp  forward_checking.cpp
tests/: solver_tests.cpp
